<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
   <include android:id="@+id/login_top"
       layout="@layout/login_register_layout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/cut_layout"/>
    <EditText
        android:id="@+id/login_phone_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:hint="@string/hind_phone"
        android:drawableLeft="@drawable/login_phone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line"/>
    <EditText
        android:id="@+id/login_pwd_et"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hind_pwd"
        android:background="@color/white"
        android:drawableLeft="@drawable/login_pwd"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center"
        android:background="@color/cut_layout">
        <Button
            android:id="@+id/login_button"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:background="@drawable/shape_login_button"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:textSize="18dp"
            android:text="@string/login_bt" />
        <TextView
            android:id="@+id/register_te"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:text="@string/register_tx"
            android:layout_below="@+id/login_button"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/find_pwd_te"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:text="@string/find_pwd"
            android:layout_below="@+id/login_button"
            android:layout_alignEnd="@+id/login_button" />
    </RelativeLayout>

</com.zhy.autolayout.AutoLinearLayout>
