<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="35dp"
    android:layout_marginLeft="10dp"
    android:layout_gravity="center_horizontal">
    <LinearLayout
        style="@style/include1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supported"/>
        <TextView
            style="@style/include1_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/line_pinglun"/>
    <LinearLayout
        style="@style/include1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attention"/>
        <TextView
            style="@style/include1_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/line_pinglun"/>
    <LinearLayout
        style="@style/include1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fans"/>
        <TextView
            style="@style/include1_text"/>
    </LinearLayout>
</com.zhy.autolayout.AutoLinearLayout>
