<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/access_tab"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/people_access"
            style="@style/textStyleAccess"
            android:text="@string/people_access"/>
        <ImageView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:src="@drawable/line_pinglun"/>
        <TextView
            android:id="@+id/brand_access"
            style="@style/textStyleAccess"
            android:text="@string/brand_access"/>
        <ImageView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:src="@drawable/line_pinglun"/>
        <TextView
            android:id="@+id/hidden_access"
            style="@style/textStyleAccess"
            android:text="@string/hidden_access"/>
    </com.zhy.autolayout.AutoLinearLayout>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/accessSwipeRefreshLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/accessListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.v4.widget.SwipeRefreshLayout>
</com.zhy.autolayout.AutoLinearLayout>
