<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cut_layout"
    >
    <include android:id="@+id/register_top"
        layout="@layout/login_register_layout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/step"/>
    </LinearLayout>

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="35dp"
        android:hint="@string/hind_phone"/>
    <EditText
        android:id="@+id/register_pwd"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="3dp"
        android:hint="密码"/>
    <Button
        android:id="@+id/register_button"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/shape_login_button"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:text="@string/get_code"/>

</com.zhy.autolayout.AutoLinearLayout>
