<?xml version="1.0" encoding="utf-8"?>
<!--主页底部导航栏 -->
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true">
    <com.zhy.autolayout.AutoLinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="106px"
        android:orientation="horizontal">
        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/homeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:layout_above="@+id/homeTextView"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bottom_home_selector"/>
            <TextView
                android:paddingBottom="10px"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/homeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_bottom_home"
                android:textColor="@color/gray_text_color"
                android:textSize="10sp"  />
        </com.zhy.autolayout.AutoRelativeLayout>
        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/duobaoLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:layout_above="@+id/duobaoTextView"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bottom_duobao_selector"/>
            <TextView
                android:paddingBottom="10px"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/duobaoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_bottom_duobao"
                android:textColor="@color/gray_text_color"
                android:textSize="10sp" />
        </com.zhy.autolayout.AutoRelativeLayout>
        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/postedLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >
            <ImageView
                android:layout_above="@+id/postedTextView"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tabbar_icon_post"/>
            <TextView
                android:paddingBottom="10px"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/postedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_bottom_posted"
                android:textColor="@color/gray_text_color"
                android:textSize="10sp" />
        </com.zhy.autolayout.AutoRelativeLayout>
        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/msgLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >
            <ImageView
                android:layout_above="@+id/msgTextView"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bottom_msg_selector"/>
            <TextView
                android:paddingBottom="10px"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/msgTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_bottom_message"
                android:textColor="@color/gray_text_color"
                android:textSize="10sp" />
        </com.zhy.autolayout.AutoRelativeLayout>
        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/myLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >
            <ImageView
                android:layout_above="@+id/myTextView"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bottom_my_selector"/>
            <TextView
                android:paddingBottom="10px"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/myTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_bottom_my"
                android:textColor="@color/gray_text_color"
                android:textSize="10sp" />
        </com.zhy.autolayout.AutoRelativeLayout>
        
    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoRelativeLayout>
